fix/ pokemon page overflow x

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,11 +7,6 @@
   box-sizing: border-box;
 }
 
-html #root {
-  width: 100vw;
-  height: 100vh;
-}
-
 body {
   width: 100%;
   height: 100%;
